# SPDX-FileCopyrightText: 2021 Agathe Porte <microjoe@microjoe.org>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "glade_derive"
version = "2.2.0"
authors = ["Agathe Porte <microjoe@microjoe.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Deprecated. Use gtk-rs's CompositeTemplate derive macro instead."
readme = "README.md"
keywords = ["gui", "gtk", "gtk-rs", "gnome", "glade"]
categories = ["gui"]
repository = "https://github.com/pandora-prime/rust-glade"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"

[dev-dependencies]
gtk = "0.16.2"
